//! Protocol Buffer and gRPC definitions for Tasker services.
//!
//! This module contains generated Protocol Buffer types and gRPC service definitions
//! for the Tasker API. The code is generated at build time from `.proto` files in
//! the `proto/` directory at the workspace root.
//!
//! # Feature Flag
//!
//! This module is only available when the `grpc-api` feature is enabled:
//!
//! ```toml
//! [dependencies]
//! tasker-shared = { version = "0.1", features = ["grpc-api"] }
//! ```
//!
//! # Services
//!
//! The following gRPC services are defined:
//!
//! - [`task_service_server`] / [`task_service_client`] - Task CRUD operations
//! - [`step_service_server`] / [`step_service_client`] - Step queries and manual resolution
//! - [`template_service_server`] / [`template_service_client`] - Template discovery
//! - [`analytics_service_server`] / [`analytics_service_client`] - Performance metrics
//! - [`dlq_service_server`] / [`dlq_service_client`] - Dead letter queue investigation tracking
//! - [`health_service_server`] / [`health_service_client`] - Health checks
//! - [`config_service_server`] / [`config_service_client`] - Configuration endpoint
//!
//! # Usage
//!
//! ## Server Implementation
//!
//! ```rust,ignore
//! use tasker_shared::proto::v1::{
//!     task_service_server::{TaskService, TaskServiceServer},
//!     CreateTaskRequest, CreateTaskResponse,
//! };
//! use tonic::{Request, Response, Status};
//!
//! #[derive(Debug, Default)]
//! pub struct MyTaskService;
//!
//! #[tonic::async_trait]
//! impl TaskService for MyTaskService {
//!     async fn create_task(
//!         &self,
//!         request: Request<CreateTaskRequest>,
//!     ) -> Result<Response<CreateTaskResponse>, Status> {
//!         // Implementation
//!         todo!()
//!     }
//!     // ... other methods
//! }
//! ```
//!
//! ## Client Usage
//!
//! ```rust,ignore
//! use tasker_shared::proto::v1::task_service_client::TaskServiceClient;
//! use tonic::transport::Channel;
//!
//! async fn connect() -> Result<(), Box<dyn std::error::Error>> {
//!     let channel = Channel::from_static("http://[::1]:9090")
//!         .connect()
//!         .await?;
//!
//!     let mut client = TaskServiceClient::new(channel);
//!     // Use client...
//!     Ok(())
//! }
//! ```

pub mod conversions;

/// Version 1 of the Tasker gRPC API.
///
/// This module contains all Protocol Buffer types and gRPC service definitions
/// for the v1 API.
pub mod v1 {
    // Include the generated Protocol Buffer code
    // This file is generated by tonic-build in build.rs
    tonic::include_proto!("tasker.v1");

    /// File descriptor set for gRPC reflection.
    ///
    /// This can be used with `tonic-reflection` to enable server reflection,
    /// allowing tools like `grpcurl` to discover services.
    pub const FILE_DESCRIPTOR_SET: &[u8] =
        tonic::include_file_descriptor_set!("tasker_descriptor");
}

// Re-export commonly used types at the module level for convenience
pub use v1::{
    // Common types
    BackpressureStatus, ErrorDetail, JsonValue, PaginationRequest, PaginationResponse,
    SortDirection, SortSpec, StepState, TaskState, TimestampRange, Uuid,
    // Task types
    CancelTaskRequest, CancelTaskResponse, CreateTaskRequest, CreateTaskResponse,
    GetTaskContextRequest, GetTaskContextResponse, GetTaskRequest, GetTaskResponse,
    ListTasksRequest, ListTasksResponse, Step, StreamTaskStatusRequest, Task, TaskContext,
    TaskStatusUpdate,
    // Step types
    GetStepAuditRequest, GetStepAuditResponse, GetStepRequest, GetStepResponse,
    ListStepsRequest, ListStepsResponse, ResolveStepRequest, ResolveStepResponse,
    StepAuditRecord, StepManualActionType,
    // Template types
    GetTemplateRequest, GetTemplateResponse, ListTemplatesRequest, ListTemplatesResponse,
    NamespaceSummary, StepDefinition, TemplateDetail, TemplateSummary,
    // Analytics types
    GetBottleneckAnalysisRequest, GetBottleneckAnalysisResponse, GetPerformanceMetricsRequest,
    GetPerformanceMetricsResponse, ResourceUtilization, SlowStepInfo, SlowTaskInfo,
    SystemHealthCounts,
    // DLQ types (investigation tracking system)
    DlqEntry, DlqInvestigationQueueEntry, DlqReason, DlqResolutionStatus, DlqStats,
    GetDlqEntryByTaskRequest, GetDlqEntryByTaskResponse, GetDlqInvestigationQueueRequest,
    GetDlqInvestigationQueueResponse, GetDlqStatsRequest, GetDlqStatsResponse,
    GetStalenessMonitoringRequest, GetStalenessMonitoringResponse, ListDlqEntriesRequest,
    ListDlqEntriesResponse, StalenessHealthStatus, StalenessMonitoringEntry,
    UpdateDlqInvestigationRequest, UpdateDlqInvestigationResponse,
    // Health types
    DetailedHealthChecks, DetailedHealthRequest, DetailedHealthResponse, HealthCheck,
    HealthInfo, HealthRequest, HealthResponse, LivenessRequest, PoolDetail, PoolUtilizationInfo,
    ReadinessChecks, ReadinessRequest, ReadinessResponse,
    // Config types
    ConfigMetadata, GetConfigRequest, GetConfigResponse, SafeAuthConfig,
    SafeCircuitBreakerConfig, SafeDatabasePoolConfig, SafeMessagingConfig,
};

// Re-export server traits and types
pub mod server {
    pub use super::v1::{
        analytics_service_server::{AnalyticsService, AnalyticsServiceServer},
        config_service_server::{ConfigService, ConfigServiceServer},
        dlq_service_server::{DlqService, DlqServiceServer},
        health_service_server::{HealthService, HealthServiceServer},
        step_service_server::{StepService, StepServiceServer},
        task_service_server::{TaskService, TaskServiceServer},
        template_service_server::{TemplateService, TemplateServiceServer},
    };
}

// Re-export client types
pub mod client {
    pub use super::v1::{
        analytics_service_client::AnalyticsServiceClient,
        config_service_client::ConfigServiceClient, dlq_service_client::DlqServiceClient,
        health_service_client::HealthServiceClient, step_service_client::StepServiceClient,
        task_service_client::TaskServiceClient, template_service_client::TemplateServiceClient,
    };
}
